# ranked-choice-scorer

./: .gitignore  README.md  TERMS.md  color_palettes.json  pyproject.toml  ranked_choice_scorer.py
docs/: CODE_OF_CONDUCT.md  README.md  opensource-checklist.md
