[tool.poetry]
name = "bampchoice"
version = "0.1.0"
description = ""
authors = ["nkt <nicholas.tulach@voteshield.us>"]

[tool.poetry.dependencies]
python = "^3.9"
gspread = "^5.1.1"
pandas = "^1.4.1"
oauth2client = "^4.1.3"
plotly = "^5.6.0"
matplotlib = "^3.5.1"
google-api-python-client = "^2.37.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.4.6"
black = "^22.1.0"
numpy = "^1.22.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
